--- a/DashWallet/Wallofcoins/StoryBoard/buyDash.storyboard
+++ b/DashWallet/Wallofcoins/StoryBoard/buyDash.storyboard
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vuo-Gb-kP9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vuo-Gb-kP9">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Helvetica.ttc">
-            <string>Helvetica</string>
-            <string>Helvetica-Bold</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Navigation Controller-->
         <scene sceneID="g3g-Mk-ryX">
@@ -190,6 +184,7 @@
                     <size key="freeformSize" width="414" height="736"/>
                     <connections>
                         <outlet property="descriptionLabel" destination="imh-jL-JKc" id="kYH-MN-ahq"/>
+                        <outlet property="informationLable" destination="JHo-YN-2Qe" id="OgI-Wf-z6L"/>
                         <outlet property="locationButton" destination="JMG-98-Lub" id="S3l-97-lsb"/>
                         <outlet property="noThanksButton" destination="d81-xa-fhq" id="J6D-CV-BwV"/>
                         <outlet property="orderListButton" destination="QvD-N7-3xq" id="prX-jR-SiK"/>
@@ -311,6 +306,7 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <size key="freeformSize" width="414" height="736"/>
                     <connections>
+                        <outlet property="informationLable" destination="L6N-Ze-JDx" id="WdU-Be-9MX"/>
                         <outlet property="nextButton" destination="F4M-WM-4Q8" id="O2k-Rr-ucU"/>
                         <outlet property="zipCodeTextField" destination="ryz-jw-eF2" id="LpV-vz-jK0"/>
                     </connections>
@@ -702,6 +698,7 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <size key="freeformSize" width="414" height="736"/>
                     <connections>
+                        <outlet property="informationLable" destination="Lyl-eJ-WEn" id="4cL-KL-TcS"/>
                         <outlet property="instructionLabel" destination="Lyl-eJ-WEn" id="Xkh-fC-Tbv"/>
                         <outlet property="offerListTableView" destination="HnD-od-cii" id="0dx-PI-smL"/>
                     </connections>
@@ -831,6 +828,7 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <size key="freeformSize" width="414" height="736"/>
                     <connections>
+                        <outlet property="doNotSendEmailButton" destination="WMc-1V-cJ6" id="4aO-0N-8A0"/>
                         <outlet property="emailTextField" destination="Wf9-Ih-ptu" id="nzQ-FS-Vjb"/>
                         <outlet property="nextButton" destination="oTs-kG-ZhV" id="27z-J7-PbG"/>
                     </connections>
@@ -1477,6 +1475,8 @@ Help is also available on the website.</string>
                         <outlet property="instructionTextField" destination="ps4-Td-epY" id="b56-VJ-aMA"/>
                         <outlet property="instructionsLabel" destination="cuE-2C-XZU" id="YHC-li-22Z"/>
                         <outlet property="loginPhoneLabel" destination="KVz-eg-Dss" id="IfF-xX-FvE"/>
+                        <outlet property="orderDetailFirstLable" destination="EJp-yv-Az2" id="lCJ-py-69i"/>
+                        <outlet property="showOnMapNearbyButton" destination="krM-lP-mGi" id="VfW-Xa-xpH"/>
                         <outlet property="signOutButton" destination="Oh5-Gx-57V" id="3h8-Dw-X4p"/>
                         <outlet property="wallOfCoinsButton" destination="YGj-Gd-0Mc" id="c6Y-wI-q1a"/>
                     </connections>
@@ -1523,13 +1523,13 @@ Help is also available on the website.</string>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gaK-EJ-hkc" userLabel="bottomView">
-                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
+                                <rect key="frame" x="0.0" y="20" width="414" height="687"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y4f-dL-mfu" userLabel="buDashView">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="161.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="155"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kyi-2f-nQu">
-                                                <rect key="frame" x="12" y="15" width="390" height="42"/>
+                                                <rect key="frame" x="12" y="15" width="390" height="40.5"/>
                                                 <color key="backgroundColor" red="0.98823529409999999" green="0.76470588240000004" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                                 <state key="normal" title="BUY MORE DASH!"/>
@@ -1538,7 +1538,7 @@ Help is also available on the website.</string>
                                                 </connections>
                                             </button>
                                             <label hidden="YES" opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="asE-Y9-ygt">
-                                                <rect key="frame" x="22" y="66" width="370" height="86.5"/>
+                                                <rect key="frame" x="22" y="64.5" width="370" height="83"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <string key="text">Wall of Coins will verify your payment. This usually takes up to 10 minutes. To expedite your order, take a picture of your receipt and click here to email your receipt to Wall of Coins.</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -1546,7 +1546,7 @@ Help is also available on the website.</string>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1GD-KR-ElS">
-                                                <rect key="frame" x="12" y="63.5" width="390" height="91.5"/>
+                                                <rect key="frame" x="12" y="62" width="390" height="88"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 <string key="text">Wall of Coins will verify your payment. This usually takes up to 10 minutes. To expedite your order, take a picture of your receipt and click here to email your receipt to Wall of Coins.</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -1575,7 +1575,7 @@ Help is also available on the website.</string>
                                         </constraints>
                                     </view>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="unJ-V2-uuc">
-                                        <rect key="frame" x="0.0" y="169.5" width="414" height="546.5"/>
+                                        <rect key="frame" x="0.0" y="163" width="414" height="524"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="summaryCell1" rowHeight="250" id="3el-fd-dvJ" customClass="WOCSummaryCell">
@@ -1887,20 +1887,20 @@ Help is also available on the website.</string>
                                                 <rect key="frame" x="0.0" y="551" width="414" height="115"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dl4-bN-kgJ" id="6lt-HD-acS">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="115"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="114.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cqg-DR-fFF">
-                                                            <rect key="frame" x="15" y="0.0" width="384" height="100"/>
+                                                            <rect key="frame" x="15" y="0.0" width="384" height="99.5"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your wallet is signed into Wall of Coins using your mobile number +12397777777" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="feb-xX-zZP">
-                                                                    <rect key="frame" x="8" y="0.0" width="368" height="47"/>
+                                                                    <rect key="frame" x="8" y="0.0" width="368" height="46.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="15.5"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CXD-0i-PrO">
-                                                                    <rect key="frame" x="10" y="54" width="364" height="36.5"/>
+                                                                    <rect key="frame" x="10" y="53.5" width="364" height="36.5"/>
                                                                     <color key="backgroundColor" red="0.83921568629999999" green="0.84313725490000002" blue="0.84313725490000002" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                                                     <state key="normal" title="SIGN OUT">
@@ -2190,6 +2190,7 @@ Help is also available on the website.</string>
                     <nil key="simulatedTopBarMetrics"/>
                     <size key="freeformSize" width="414" height="736"/>
                     <connections>
+                        <outlet property="informationLable" destination="pCs-gV-FfI" id="aeJ-ch-8ax"/>
                         <outlet property="nextButton" destination="UWv-RW-Hmf" id="Cv7-L8-PSH"/>
                         <outlet property="paymentCenterTextField" destination="LAR-DE-N53" id="9xv-Yc-o83"/>
                     </connections>
@@ -2496,8 +2497,8 @@ Help is also available on the website.</string>
                                         <rect key="frame" x="0.0" y="557" width="414" height="71.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9KH-bz-c6f">
-                                                <rect key="frame" x="41.5" y="14.5" width="331" height="43"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <rect key="frame" x="42" y="14" width="331" height="43"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <color key="backgroundColor" red="0.98823529409999999" green="0.76470588240000004" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <state key="normal" title="WALLOFCOINS SIGN UP">
                                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -2513,8 +2514,8 @@ Help is also available on the website.</string>
                                         <rect key="frame" x="0.0" y="628.5" width="414" height="71.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T2H-UI-wgU">
-                                                <rect key="frame" x="41.5" y="15" width="331" height="42.5"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <rect key="frame" x="42" y="15" width="331" height="43"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <color key="backgroundColor" red="0.98823529409999999" green="0.76470588240000004" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                                                 <state key="normal" title="Existing WallofCoins Account Sign In:">
                                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
